Checkout Management App/objects/Customer__c.object
<CustomObject>
    <description>Contains information about the subscriber, including active subscriptions, invoices, and transactions.</description>
    <fields>
        <fullName>AdditionalEmailAddresses__c</fullName>
        <description>Stores the additional email addresses of the customer.</description>
        <label>Additional Email Addresses</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerOrgIdUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Organization Id of the Customer&apos;s org.</description>
        <externalId>true</externalId>
        <label>Customer Org Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CustomerOrgId__c</fullName>
        <description>The Organization Id of the Customer&apos;s org.</description>
        <externalId>true</externalId>
        <label>Customer Org Id (deprecated)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>Name of the Account associated with this customer&apos;s subscriptions.</description>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Customer&apos;s current email address.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <description>Customer&apos;s shipping country</description>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemporaryAmountDiscountedByCoupon__c</fullName>
        <label>Temporary Amount Discounted By Coupon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TemporaryBillingCountry__c</fullName>
        <label>Temporary Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemporaryChargeVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temporary Charge VAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TemporaryCouponDiscountType__c</fullName>
        <label>Temporary Coupon Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>dollars</fullName>
                </value>
                <value>
                    <fullName>percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TemporaryCouponLifespan__c</fullName>
        <label>Temporary Coupon Lifespan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Forever</fullName>
                </value>
                <value>
                    <fullName>Limited Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TemporaryCoupon__c</fullName>
        <label>Temporary Coupon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemporaryListingId__c</fullName>
        <label>Temporary Listing Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemporaryListingName__c</fullName>
        <label>Temporary Listing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemporaryNumberOfTimesCouponApplies__c</fullName>
        <label>Temporary Number Of Times Coupon Applies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TemporaryPackageId__c</fullName>
        <label>Temporary Package Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemporaryPercentDiscountedByCoupon__c</fullName>
        <label>Temporary Percent Discounted By Coupon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TemporaryShippingCountry__c</fullName>
        <label>Temporary Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemporaryStripeCustomerId__c</fullName>
        <label>Temporary Stripe Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemporaryVATNumber__c</fullName>
        <label>Temporary VAT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemporaryVATPercentage__c</fullName>
        <label>Temporary VAT Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalContractValue__c</fullName>
        <label>Total Contract Value</label>
        <summarizedField>Subscription__c.TotalAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Subscription__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Customer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalLicenses__c</fullName>
        <label>Total Licenses</label>
        <summarizedField>Subscription__c.NumberOfUnits__c</summarizedField>
        <summaryFilterItems>
            <field>Subscription__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.Customer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Checkout Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CustomerName__c</columns>
        <columns>CustomerOrgIdUnique__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CUS-{000000}</displayFormat>
        <label>Checkout Customer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Customers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>